[package]
name = "os"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# exit when panic occur
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"